--- a/trunk/NWBA/NWBA/HomeWindow.xaml
+++ b/trunk/NWBA/NWBA/HomeWindow.xaml
@@ -17,45 +17,83 @@
                         <ColumnDefinition Width="200"/>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="100"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
 
                     <!-- Row 0 -->
-                    <TextBlock Grid.Row="0" Grid.Column="0">Books:</TextBlock>
-                    <TextBlock Grid.Row="0" Grid.Column="1">Search:</TextBlock>
+                    <TextBlock Grid.Row="0" Grid.Column="0"
+                               Text="Books:"
+                               />
+                    <TextBlock Grid.Row="0" Grid.Column="1"
+                               Margin="5,0,0,0"
+                               Text="Search:"
+                               />
                     <TextBox x:Name="txtSearch"
                              Grid.Row="0" Grid.Column="2"
                              Margin="5,0,0,0"
-                             />
-                    <Button x:Name="cmdSearch"
-                            Grid.Row="0" Grid.Column="3"
-                            Margin="5,0,0,0"
-                            Content="Search"
-                            Click="cmdSearch_Click"
-                            />                            
+                             TextChanged="txtSearch_TextChanged"
+                             />                          
                     <!-- EndRow 0 -->
 
                     <!-- Row 1 -->                    
                     <ListBox x:Name="lstBook"
-                             Grid.Row="1" Grid.RowSpan="3" Grid.Column="0"
+                             Grid.Row="1" Grid.RowSpan="10" Grid.Column="0"
+                             Margin="0,5,0,0"
                              ItemsSource="{Binding Path=BookList}"
+                             SelectedValuePath="ValueMember"
                              DisplayMemberPath="DisplayMember"    
                              SelectionChanged="lstBook_SelectionChanged"
                              />
 
                     <ListBox x:Name="lstMatchingWords"
-                             Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2"
+                             Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"
                              Margin="5,5,0,0"
                              ItemsSource="{Binding Path=MatchingWords}"
                              DisplayMemberPath="Value"    
                              SelectionChanged="lstMatchingWords_SelectionChanged"
                              />
                     <!-- EndRow 1 -->
+
+                    <!-- Row 2 -->
+                    <TextBlock x:Name="lblWord"
+                               Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2"
+                               Margin="5,10,0,5"
+                               FontSize="20"
+                               />
+                    <!-- EndRow 2 -->
+
+                    <!-- Row 3 -->
+                    <TextBlock x:Name="lblPronunciation"
+                               Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2"
+                               Margin="5,0,0,5"
+                               FontSize="15"
+                               />
+                    <!-- EndRow 3 -->
+
+                    <!-- Row 4 -->
+                    <TextBlock x:Name="lblExamples"
+                               Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2"
+                               Margin="5,10,0,5"
+                               Text="Examples:"
+                               Visibility="Collapsed"
+                               />
+                    <!-- EndRow 4 -->
+
+                    <!-- Row 6 -->
+                    <TextBlock x:Name="lblPageLocation"
+                               Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2"
+                               Margin="5,0,0,5"
+                               />
+                    <!-- EndRow 6 -->
+
                 </Grid>
             </TabItem>
             
@@ -71,6 +109,14 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
 
@@ -78,18 +124,33 @@
                     <TextBlock Grid.Row="0" Grid.Column="0">Word:</TextBlock>
                     <TextBox x:Name="txtWord"
                              Grid.Row="0" Grid.Column="1"
-                             Margin="5,0,0,0"
+                             Margin="5,0,0,5"
                              />
                     <!-- EndRow 0 -->
 
                     <!-- Row 1 -->
+                    <TextBlock Grid.Row="1" Grid.Column="0">Pronunciation:</TextBlock>
+                    <TextBox x:Name="txtPronunciation"
+                             Grid.Row="1" Grid.Column="1"
+                             Margin="5,0,0,5"
+                             />
+                    <!-- EndRow 1 -->
+
+                    <!-- Row 2 -->
+                    <TextBlock Grid.Row="2" Grid.Column="0">Page(Location):</TextBlock>
+                    <TextBox x:Name="txtPageLocation"
+                             Grid.Row="2" Grid.Column="1"
+                             Margin="5,0,0,5"
+                             />
+                    <!-- EndRow 2 -->
+
+                    <!-- Row 10 -->
                     <Button x:Name="cmdSaveWord"
-                            Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
-                            Margin="0,5,0,0"
+                            Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2"
                             Content="Save"
                             Click="cmdSaveWord_Click"
                             />
-                    <!-- EndRow 1 -->
+                    <!-- EndRow 10 -->
                 </Grid>
             </TabItem>
             
@@ -118,6 +179,7 @@
                     <!-- Row 1 -->
                     <Button x:Name="cmdSaveSettings"
                             Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+                            Margin="0,5,0,0"
                             Content="Save"
                             Click="cmdSaveSettings_Click"
                             />
