--- a/NWBA/NWBA/HomeWindow.xaml
+++ b/NWBA/NWBA/HomeWindow.xaml
@@ -25,6 +25,12 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
 
@@ -45,7 +51,7 @@
 
                     <!-- Row 1 -->                    
                     <ListBox x:Name="lstBook"
-                             Grid.Row="1" Grid.RowSpan="10" Grid.Column="0"
+                             Grid.Row="1" Grid.RowSpan="20" Grid.Column="0"
                              Margin="0,5,0,0"
                              ItemsSource="{Binding Path=BookList}"
                              SelectedValuePath="ValueMember"
@@ -57,6 +63,7 @@
                              Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"
                              Margin="5,5,0,0"
                              ItemsSource="{Binding Path=MatchingWords}"
+                             SelectedValuePath="WordId"
                              DisplayMemberPath="Value"    
                              SelectionChanged="lstMatchingWords_SelectionChanged"
                              />
@@ -79,26 +86,67 @@
                     <!-- EndRow 3 -->
 
                     <!-- Row 4 -->
-                    <TextBlock x:Name="lblExamples"
+                    <TextBlock x:Name="lblTranslation"
                                Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2"
+                               Margin="5,0,0,5"
+                               />
+                    <!-- EndRow 4 -->
+
+                    <!-- Row 5 -->
+                    <TextBlock x:Name="lblPageLocation"
+                               Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2"
+                               Margin="5,0,0,5"
+                               />
+                    <!-- EndRow 5 -->
+
+                    <!-- Row 6 -->
+                    <TextBlock x:Name="lblExamplesLabel"
+                               Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2"
                                Margin="5,10,0,5"
                                Text="Examples:"
                                Visibility="Collapsed"
                                />
-                    <!-- EndRow 4 -->
-
-                    <!-- Row 6 -->
-                    <TextBlock x:Name="lblPageLocation"
-                               Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2"
-                               Margin="5,0,0,5"
-                               />
                     <!-- EndRow 6 -->
 
+                    <!-- Row 7 -->
+                    <TextBlock x:Name="lblExamples"
+                               Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="2"
+                               Margin="5,0,0,5"
+                               TextWrapping="Wrap"
+                               />
+                    <!-- EndRow 7 -->
+
+                    <!-- Row 8 -->
+                    <Button x:Name="cmdEditWord"
+                            Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="2"
+                            Margin="5,0,0,5"
+                            Content="Edit"
+                            Click="cmdEditWord_Click"
+                            />
+                    <!-- EndRow 8 -->
+
+                    <!-- Row 9 -->
+                    <Button x:Name="cmdDeleteWord"
+                            Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="2"
+                            Margin="5,0,0,5"
+                            Content="Delete"
+                            Click="cmdDeleteWord_Click"
+                            />
+                    <!-- EndRow 9 -->
+
+                    <!-- Row 10 -->
+                    <Button x:Name="cmdAddWord"
+                            Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="2"
+                            Margin="5,0,0,5"
+                            Content="Add"
+                            Click="cmdAddWord_Click"
+                            />
+                    <!-- EndRow 10 -->
                 </Grid>
             </TabItem>
             
             <TabItem x:Name="tiAdd"
-                     Header="Add"
+                     Header="Add/Edit"
                      >
                 <Grid Margin="10">
                     <Grid.ColumnDefinitions>
@@ -106,11 +154,6 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
@@ -137,20 +180,38 @@
                     <!-- EndRow 1 -->
 
                     <!-- Row 2 -->
-                    <TextBlock Grid.Row="2" Grid.Column="0">Page(Location):</TextBlock>
-                    <TextBox x:Name="txtPageLocation"
+                    <TextBlock Grid.Row="2" Grid.Column="0">Translation:</TextBlock>
+                    <TextBox x:Name="txtTranslation"
                              Grid.Row="2" Grid.Column="1"
                              Margin="5,0,0,5"
+                             AcceptsReturn="True"
                              />
                     <!-- EndRow 2 -->
 
-                    <!-- Row 10 -->
+                    <!-- Row 3 -->
+                    <TextBlock Grid.Row="3" Grid.Column="0">Page(Location):</TextBlock>
+                    <TextBox x:Name="txtPageLocation"
+                             Grid.Row="3" Grid.Column="1"
+                             Margin="5,0,0,5"
+                             />
+                    <!-- EndRow 3 -->
+                    
+                    <!-- Row 4 -->
+                    <TextBlock Grid.Row="4" Grid.Column="0">Examples:</TextBlock>
+                    <TextBox x:Name="txtExamples"
+                             Grid.Row="4" Grid.Column="1"
+                             Margin="5,0,0,5"
+                             AcceptsReturn="True"
+                             />
+                    <!-- EndRow 4 -->
+                    
+                    <!-- Row 5 -->
                     <Button x:Name="cmdSaveWord"
-                            Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2"
+                            Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2"
                             Content="Save"
                             Click="cmdSaveWord_Click"
                             />
-                    <!-- EndRow 10 -->
+                    <!-- EndRow 5 -->
                 </Grid>
             </TabItem>
             
